kustomize/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-gitops
  name: hello-gitops-dev
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: hello-gitops
  template:
    metadata:
      labels:
        app: hello-gitops
    spec:
      containers:
        - image: hello-gitops
          name: hello-gitops
          ports:
          - name: http
            containerPort: 8080
          volumeMounts:
            - mountPath: /opt
              name: hello-gitops-volume-dev
      restartPolicy: Always
      volumes:
      - name: hello-gitops-volume-dev
        persistentVolumeClaim:
          claimName: hello-gitops-volume-dev
